.devcontainer/test/jinjaboard/errors/yaml_parse_error.yaml.j2
cards:
  - type: markdown
      content: "bad indentation makes this invalid YAML"
